Bug 132841 - Enabling contour for page wrap left or right or optimal switches wrap to Page wrap
Summary: Enabling contour for page wrap left or right or optimal switches wrap to Page...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Anchor-and-Text-Wrap
  Show dependency treegraph
 
Reported: 2020-05-08 12:50 UTC by Telesto
Modified: 2020-09-09 13:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (20.58 KB, application/vnd.oasis.opendocument.text)
2020-05-08 12:51 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-08 12:50:19 UTC
Description:
Enabling contour for page wrap left switches wrap to Page wrap

Steps to Reproduce:
1. Open the attached file
2. Click the shape & enable contour
3. Check the page wrap again

Actual Results:
Page wrap changes from left to wrap through

Expected Results:
Should stay left


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 97a2c1fc5e376c0c00968f17a0392c6d3a5ed565
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: threaded
Comment 1 Telesto 2020-05-08 12:51:49 UTC
Created attachment 160533 [details]
Example file
Comment 2 Telesto 2020-05-08 12:53:28 UTC
Note only happening in right click menu, contour.. not Wrap -> Edit settings dialog
Comment 3 Buovjaga 2020-08-31 18:38:03 UTC
For me, the wrap setting of the shape changed from Optimal to Parallel, so not as you say.

Already changing (but to Page wrap) in 4.4.7. Shape not visible in 3.5.0 or 3.3.0.

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: d784e711c102f204552c3c816636da01b1085f61
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 29 August 2020
Comment 4 Justin L 2020-09-02 13:03:59 UTC
(In reply to Telesto from comment #2)
> Note only happening in right click menu
Also happening on Format menu - Wrap - Contour
Also happening if you turn OFF contour.
Comment 5 Justin L 2020-09-02 16:06:26 UTC
Proposed fix at http://gerrit.libreoffice.org/c/core/+/101947
Comment 6 Commit Notification 2020-09-09 12:30:33 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d30fdc737919bb16301351da8a59af9478eb4393

tdf#132841 sw UI: setting contour should not change wrap

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.