tdf#132841 sw UI: setting contour should not change wrap

LEFT, RIGHT,and OPTIMAL all can legitimately use contour wrap,
so don't reset it to PARALLEL unless it is currently NONE
or THROUGH. (And in that case, the UI already has contour
hidden, but just to keep each part individually correct,
it seems to make sense to check for that case.)

The original import included the dead code
                if (nSurround == SURROUND_THROUGH)
                    nSurround = SURROUND_PARALLEL;

which probably ought to have been
                if (nOldSurround == SURROUND_THROUGH)

So that tells me that someone was at least thinking about
the situation, but very poorly implemented it.
Indeed, several followup patches add nOldSurround code,
but unfortunately they didn't catch this situation.

Change-Id: I971a31582ec600bc3416bef46ba17e7b0c3a6543